# Sentient-Enclaves-Framework

./: .gitignore  Cargo.toml  FEATURES.md  QUICKSTART-GUIDE.md  README.LEGACY.md  README.md  VISION.md  rustfmt.toml
.bin/: pipeline-dir  pipeline-dir.sh  shell.sh
.cargo/: config.toml
.docker/: app-builder-eif-build-al2.dockerfile  app-builder-pipeline-al2.dockerfile  app-builder-pipeline-al2023.dockerfile  app-builder-pipeline-bin.dockerfile  app-builder-pipeline.dockerfile  eif-builder-al2.dockerfile  eif-builder-al2023.dockerfile  fine_tuning_app_debian.dockerfile  fine_tuning_app_pipeline_AL2023.dockerfile  fine_tuning_app_pipeline_al2023.dockerfile  golang-clang-build-toolkit.dockerfile  init-build-blobs.dockerfile  pf-builder-al2.dockerfile  pf-builder-al2023.dockerfile  pipeline-al2.dockerfile  pipeline-al2023.dockerfile  pipeline-slc-network-al2023.dockerfile  rust-build-toolkit-al2.dockerfile  rust-build-toolkit-al2023.dockerfile
.docker/nix-hash/: nix-hash.dockerfile  nix-hash.sh
.linux/: 50-limits.conf  50-limits.system.conf  50-limits.user.conf  allocator.yaml  grub  htoprc  limits.conf
.linux/etc/: rsyncd.conf  rsyncd.secrets
cryptography/: Cargo.toml  rustfmt.toml
cryptography/src/: k256.rs  p256.rs  p384.rs  p521.rs
docs/: BUILDING.md  CHANGELOG.md  CONFIDENTIAL_VM_DIAGRAMS.md  CONFIDENTIAL_VM_INSTANCES.md  CVM-UMA.md  FEATURES.md  QUICKSTART-GUIDE.md  RBUILDS.md  README.LEGACY.md  README.md  REFERENCE_README.md  ROADMAP.md  SETUP.md  USAGE.md  aws_confidential_computing_comparison.md  index.html  llm-cpu-inference-sizing-guide.md  llm-inference-calculator.html  llm-inference-sizing-model.html  llm_inference_sizing_and_device_class_guide.md  multi_hop_reencryption.md  multi_hop_reencryption_for_data_protection.proto.rs.md  net-demo.html  rbuilds-demo.html  setup.md  tdx_vs_sev_snp_attestation.md  tee-enabled-cloud-providers-for-custom-cvms.md  tee-hardware-providers-for-own-cvms.md  unified_vs_discrete_memory_for_confidential_ai_and_cvms.md  unified_vs_discrete_memory_for_confidential_ai_and_cvms_2nd_iteration.md
docs/assets/: llm-inference-sizing-model.jsx  llm_inference_device_classes_matrix.csv
docs/md/: ATTESTATION_WEB_API.md  BUILDING.md  CHANGELOG.md  OPENSSL_BUILD.md  REFERENCE_README.md  ROADMAP.md  USAGE.md  VISION.md
enclave-engine/: Cargo.toml  README.md  config.yaml
enclave-engine/src/: api.rs  config.rs  error.rs  main.rs  service.rs
enclave-engine/src/backends/: nitro.rs  qemu.rs
enclave-engine/src/provisioners/: hugepages.rs  numa.rs
enclave-init/: CHANGELOG.md  Cargo.toml  README.md
enclave-init/examples/service/: myapp.service
enclave-init/rootfs/etc/: init.yaml  initctl.host.yaml  initctl.yaml
enclave-init/rootfs/service/: database.service  webapp.service  worker.service
enclave-init/src/: config.rs  dependencies.rs  initctl.rs  logger.rs  main.rs  process.rs  protocol.rs  streamer.rs
fingerprinting_server/: Cargo.toml  config.toml
fingerprinting_server/src/: lib.rs  main.rs
fingerprinting_server/tests/: client.rs
fs-monitor/: .fsignore  Cargo.toml  README.md  fs_ignore
fs-monitor/src/: lib.rs  main.rs
fs-monitor/src/hash/: hasher.rs  mod.rs  storage.rs
fs-monitor/src/monitor_module/: debounced_events_handler.rs  debounced_watcher.rs  fs_utils.rs  ignore.rs  state.rs
fs-monitor/tests/: common.rs  directories.rs  files.rs
fs_monitor/: Cargo.toml  README.md  fs_ignore
fs_monitor/src/: fs_ignore.rs  lib.rs  main.rs  state.rs
pf-proxy/: CLI-REFERENCE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
pf-proxy/network.init/: .config  cats  networking.sh  pf-tp-host.sh
pf-proxy/networking.init/: pf-guest.sh  pf-tp-guest.sh  pf-tp-host.sh  pipeline
pf-proxy/networking.sh/: networking.sh  pf-host.sh  pipeline-dir  shell.sh
pf-proxy/src/: addr_info.rs  ip_to_vsock.rs  ip_to_vsock_transparent.rs  lib.rs  transparent_port_to_vsock.rs  vsock_to_ip.rs  vsock_to_ip_transparent.rs
pipeline/: CLI-REFERENCE.md  Cargo.toml  README.md
pipeline/.config/: pipeline.config.toml  pipeline.config.yaml
pipeline/cryptography/: Cargo.toml  rust-toolchain
pipeline/cryptography/src/: k256.rs  p224.rs
pipeline/src/: cats.rs  cli.rs  cli_parser.rs  config.rs  error.rs  lib.rs  main.rs  vsock.rs
ra-web-srv/: Cargo.toml  README.md
ra-web-srv/.config/: ra-web-srv.config.yaml  ra_web_srv.config.toml
ra-web-srv/mt-runtime/: mt-runtime-tokio-tasks.rs  mt-runtime.rs
ra-web-srv/ra-web-srv-legacy/: Cargo.toml
ra-web-srv/ra-web-srv-legacy/nsm-test/: Cargo.toml
ra-web-srv/ra-web-srv-legacy/self_signed_certs/ed25519/: certificate.pem  private_key.pem
ra-web-srv/src/: attestation.rs  cipher.rs  config.rs  crypto.rs  errors.rs  handlers.rs  hashing.rs  lib.rs  main.rs  nats.rs  nsm.rs  ra-web-srv.rs  requests.rs  server.rs  state.rs
rbuilds/: README.md  build-al2.sh  build.sh  eif-builder-al2.dockerfile  eif-builder-al2023.dockerfile  pipeline-al2.dockerfile  pipeline-al2023.dockerfile  pipeline-slc-network-al2023.dockerfile  rbuild-al2.sh  rbuild.io.sh  rbuild.sh  rbuilds.sh  rust-build-toolkit-al2.dockerfile  rust-build-toolkit-al2023.dockerfile
rbuilds.legacy/: build.sh  cpio_tar_padding_experiment  eif-builder-al2023.dockerfile  init_build  kernel_config  pipeline-al2.dockerfile  pipeline-al2023.dockerfile  rbuild-al2.sh  rbuild.io.sh  rootfs_base  rust-build-toolkit-al2023.dockerfile
reference_apps/: README.md  convert_to_gguf.sh
reference_apps/inference_server/: Cargo.toml  README.md  TEE_rbuilds_setup.md  TEE_setup.md  inference_server.dockerfile
reference_apps/inference_server/src/: lib.rs  main.rs
reference_apps/inference_server/tests/: client.rs
reference_apps/llamacpp_bindings/: Cargo.toml  README.md
reference_apps/llamacpp_bindings/src/: lib.rs
web-ra/: Cargo.toml
web-ra/.cargo/: config.toml
web-ra/mt-runtime/: Cargo.toml
web-ra/mt-runtime/.config/: config.toml
web-ra/mt-runtime/certs/: cert.pem
web-ra/mt-runtime/src/: mt-runtime.rs  ra-web-srv.rs
web-ra/nsm-test/: Cargo.toml
web-ra/self_signed_certs/ec/: private_key.pem
web-ra/src/: main.rs
(+100 files in other folders)
