[workspace]
members = [
    "pipeline",
    "pf-proxy",
    "ra-web-srv",
    "fs-monitor",
]
exclude = [
    "cryptography",
    "reference_apps",
]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Sentient Enclaves Team <sentient-enclaves-team@sentient.xyz>"]
license = "Apache-2.0"
homepage = "https://github.com/sentient-agi/Sentient-Enclaves-Framework"
repository = "https://github.com/sentient-agi/Sentient-Enclaves-Framework"

[workspace.metadata]
rust-version = "1.80"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
