[workspace]
members = [
    "enclave-init",
    "pipeline",
    "pf-proxy",
    "ra-web-srv",
    "fs-monitor",
]
exclude = [
    "cryptography",
    "reference_apps",
]

# edition = "2021"
resolver = "2"
overflow-checks = true

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
