[package]
name = "enclave-init"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "init"
path = "src/main.rs"

[[bin]]
name = "initctl"
path = "src/initctl.rs"

[dependencies]
nix = { version = "0.26.4", features = ["signal", "mount", "process", "socket", "fs", "ioctl", "dir"] }
libc = "0.2.175"
thiserror = "1.0.69"
anyhow = "1.0.99"
log = "0.4.27"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.53", features = ["derive", "env"] }
serde_yaml = "0.9"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"
