[package]
name = "fs-monitor"
version = "0.8.2"
authors = ["Sentient Enclaves Team <sentient-enclaves-team@sentient.xyz>"]
edition = "2021"
description = "Real-time inotify events monitoring server for file system changes in AWS Nitro Enclaves"
homepage = "https://github.com/sentient-agi/Sentient-Enclaves-Framework"
repository = "https://github.com/sentient-agi/Sentient-Enclaves-Framework"
license = "Apache-2.0"
keywords = ["filesystem", "monitoring", "tee", "enclave", "inotify"]
categories = ["filesystem", "os::unix-apis", "cryptography"]
publish = false

[dependencies]
inotify = "0.11.0"
futures = "0.3"
notify = "7.0.0"
sha2 = "0.10.0"
dashmap = "6.1.0"
glob = "0.3.2"
tempfile = "3.17.1"
sha3 = "0.10.8"
tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.5.28", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
notify-debouncer-full = "0.5.0"
async-nats = "0.42"
bytes = "1.10.1"
