[package]
name = "pf-proxy"
version = "0.8.2"
authors = ["Sentient Enclaves Team <sentient-enclaves-team@sentient.xyz>"]
edition = "2021"
description = "Transparent vsock proxies for internet-enabled applications in AWS Nitro Enclaves"
homepage = "https://github.com/sentient-agi/Sentient-Enclaves-Framework"
repository = "https://github.com/sentient-agi/Sentient-Enclaves-Framework"
license = "Apache-2.0"
keywords = ["proxy", "vsock", "tee", "enclave", "aws-nitro"]
categories = ["network-programming", "cryptography"]
publish = false

[[bin]]
name = "vsock-to-ip"
path = "src/vsock_to_ip.rs"

[[bin]]
name = "ip-to-vsock"
path = "src/ip_to_vsock.rs"

[[bin]]
name = "ip-to-vsock-transparent"
path = "src/ip_to_vsock_transparent.rs"

[[bin]]
name = "vsock-to-ip-transparent"
path = "src/vsock_to_ip_transparent.rs"

[[bin]]
name = "transparent-port-to-vsock"
path = "src/transparent_port_to_vsock.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3"
thiserror = "1.0.57"
tokio = { version = "1.44", features = ["full"] }
tokio-vsock = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
