[package]
name = "pipeline"
version = "0.8.1"
authors = ["Sentient Enclaves Team <sentient-enclaves-team@sentient.xyz>"]
edition = "2021"
# resolver = "2"
# rust-version = "1.80"
description = "Pipeline vsock secure local channel communication protocol that provides remote control of enclave via running shell commands inside the enclave and provides bidirectional files transmission into/from encalve's file system."
homepage = "https://github.com/sentient-xyz/pipeline-tee.rs/"
repository = "https://github.com/sentient-xyz/pipeline-tee.rs/"
license = "Apache-2.0"
publish = false

[dependencies]
clap = "3.2.25"
log = "0.4"
nix = "0.26"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.3"
num = "0.2"
num-derive = "0.4"
num-traits = "0.2"
toml = "0.8"

[dev-dependencies]

[build-dependencies]

[target]

[features]
