[package]
name = "pipeline"
version = "0.8.2"
authors = ["Sentient Enclaves Team <sentient-enclaves-team@sentient.xyz>"]
edition = "2021"
# resolver = "2"
# rust-version = "1.80"
description = "Pipeline vsock secure local channel communication protocol that provides remote control of enclave via running shell commands inside the enclave and provides bidirectional files transmission into/from enclave's file system."
homepage = "https://github.com/sentient-agi/Sentient-Enclaves-Framework"
repository = "https://github.com/sentient-agi/Sentient-Enclaves-Framework"
license = "Apache-2.0"
keywords = ["tee", "enclave", "confidential-computing", "vsock", "aws-nitro"]
categories = ["cryptography", "network-programming", "command-line-utilities"]
publish = false

[dependencies]
clap = "4.5"
log = "0.4"
nix = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
toml = "0.8"

[dev-dependencies]

[build-dependencies]

[target]

[features]
