[package]
name = "cryptography"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "k256"
path = "src/k256.rs"

[[bin]]
name = "p224"
path = "src/p224.rs"

[[bin]]
name = "p256"
path = "src/p256.rs"

[[bin]]
name = "p384"
path = "src/p384.rs"

[[bin]]
name = "p521"
path = "src/p521.rs"

[dependencies]
# elliptic-curve = { version = "0.14.0-rc.1", default-features = false, features = ["sec1"] }
# k256 = { version = "0.14.0-pre.2", default-features = true, features = ["ecdh"] }
k256 = { git = "https://github.com/RustCrypto/elliptic-curves.git", branch = "master", version = "0.14.0-pre.2", default-features = true, features = ["ecdh"] }
p224 = { git = "https://github.com/RustCrypto/elliptic-curves.git", branch = "master", version = "0.14.0-pre", default-features = true, features = ["ecdh"] }
p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git", branch = "master", version = "0.14.0-pre.2", default-features = true, features = ["ecdh"] }
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git", branch = "master", version = "0.14.0-pre.2", default-features = true, features = ["ecdh"] }
p521 = { git = "https://github.com/RustCrypto/elliptic-curves.git", branch = "master", version = "0.14.0-pre.2", default-features = true, features = ["ecdh"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

hkdf = { version = "0.13.0-pre.4" }
hmac = "0.13.0-pre.4"

sha3 = "0.11.0-pre.4"
digest = "=0.11.0-pre.9"
keccak = "=0.2.0-pre.0"

[workspace]
