[package]
name = "mt-runtime"
version = "0.6.2"
edition = "2021"

[[bin]]
name = "mt-runtime"
path = "src/mt-runtime.rs"

[dependencies]
futures = "0.3"
tokio = { version = "1.36.0", features = ["full"] }
async-std = "1.13"
hex = "0.4"
# sha3 = "0.11.0-pre.4"
sha3 = "0.10.8"
async-recursion = "1.1.1"

[workspace]
