[package]
name = "nsm-test"
version = "0.8.1"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>", "Sentient Enclaves Team <sentient-enclaves-team@sentient.xyz>"]
edition = "2021"

[features]
config_emulated = []

[dependencies]
serde_bytes = "0.11"
serde_cbor = "0.11"
nix = "0.26"
threadpool = "1.7"
signal-hook = "0.3"
vsock = "0.3"
hex = "0.4"
nsm-lib = { git = "https://github.com/andrcmdr/aws-nitro-enclaves-nsm-api.git", branch = "main", version = "0.4.0" }
aws-nitro-enclaves-nsm-api = { git = "https://github.com/andrcmdr/aws-nitro-enclaves-nsm-api.git", branch = "main", version = "0.4.0" }
aws-nitro-enclaves-cose = { git = "https://github.com/andrcmdr/aws-nitro-enclaves-cose.git", branch = "main", version = "0.5.2", features = ["key_openssl_pkey"] }

[workspace]
